feat/CIV-349 separated versions for preparing directions questionnaire